트레이드 배치 로직 정리